# filtergenerator

./: .gitignore  Gemfile  README.md  TODO  definitions.yml  interfaces.yml  main.rb  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.old/exe/: cli.rb
.old/tests/: test_routers.py
data/: interfaces.yml
data/rules/: rules.csv
lib/: filtergen.rb
lib/filtergen/: filtergen.rb  repository.rb
old/spec/: filtergen_spec.rb  spec_helper.rb
old/spec/filtergen/: repository_spec.rb
old/src/filtergenerator/: routers.py
old/tests/: test_cli.py
sample_data/: definitions.yml  interfaces.yml
spec/: filtergen_spec.rb  spec_helper.rb
spec/filtergen/: filtergen_spec.rb  repository_spec.rb  routers_spec.rb
src/filtergenerator/: __init__.py  cli.py  repository.py  router.py  routers.py
tests/: rule_test.py  test_repository.py  test_routers.py
