[tool.poetry]
name = "filtergenerator"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.scripts]
generate = "filtergenerator.cli:main"
filter = "filtergenerator.cli:runfilter"

[tool.poetry.dependencies]
python = "^3.6"
pyyaml = "^5.4.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
assertpy = "^1.1"
pytest-watch = "^4.2.0"
pytest-mock = "^3.5.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
